r3: se realizo el css hasta el about

--- a/index.html
+++ b/index.html
@@ -53,21 +53,21 @@
 
             <div class="about__main">
                 <article class="about__icons">
-                    <img src="./images/shapes.svg" class="about__icon" alt="">
+                    <img src="./img/shapes.svg" class="about__icon" alt="">
                     <h3 class="about__title">CSS Layouts</h3>
                     <p class="about__paragrah">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae tempore
                         porro eius facilis?</p>
                 </article>
 
                 <article class="about__icons">
-                    <img src="./images/paint.svg" class="about__icon" alt="">
+                    <img src="./img/paint.svg" class="about__icon" alt="">
                     <h3 class="about__title">Animaciones</h3>
                     <p class="about__paragrah">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae tempore
                         porro eius facilis?</p>
                 </article>
 
                 <article class="about__icons">
-                    <img src="./images/code.svg" class="about__icon" alt="">
+                    <img src="./img/code.svg" class="about__icon" alt="">
                     <h3 class="about__title">Sass</h3>
                     <p class="about__paragrah">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae tempore
                         porro eius facilis?</p>
@@ -86,7 +86,7 @@
                 </div>
 
                 <figure class="knowledge__picture">
-                    <img src="./images/macbook.png" class="knowledge__img" alt="">
+                    <img src="./img/macbook.png" class="knowledge__img" alt="">
                 </figure>
             </div>
         </section>
@@ -142,7 +142,7 @@
 
         <section class="testimony">
             <div class="testimony__container container">
-                <img src="./images/leftarrow.svg" class="testimony__arrow" id="before" alt="">
+                <img src="./img/leftarrow.svg" class="testimony__arrow" id="before" alt="">
 
                 <section class="testimony__body testimony__body--show" data-id="1">
                     <div class="testimony__texts">
@@ -154,7 +154,7 @@
                     </div>
 
                     <figure class="testimony__picture">
-                        <img src="./images/face.jpg" class="testimony__img" alt="">
+                        <img src="./img/face.jpg" class="testimony__img" alt="">
                     </figure>
                 </section>
 
@@ -168,7 +168,7 @@
                     </div>
 
                     <figure class="testimony__picture">
-                        <img src="./images/face2.jpg" class="testimony__img" alt="">
+                        <img src="./img/face2.jpg" class="testimony__img" alt="">
                     </figure>
                 </section>
 
@@ -181,7 +181,7 @@
                     </div>
 
                     <figure class="testimony__picture">
-                        <img src="./images/face3.jpg" class="testimony__img" alt="">
+                        <img src="./img/face3.jpg" class="testimony__img" alt="">
                     </figure>
                 </section>
 
@@ -194,12 +194,12 @@
                     </div>
 
                     <figure class="testimony__picture">
-                        <img src="./images/face4.jpg" class="testimony__img" alt="">
+                        <img src="./img/face4.jpg" class="testimony__img" alt="">
                     </figure>
                 </section>
 
 
-                <img src="./images/rightarrow.svg" class="testimony__arrow" id="next" alt="">
+                <img src="./img/rightarrow.svg" class="testimony__arrow" id="next" alt="">
             </div>
         </section>
 
@@ -213,7 +213,7 @@
                     <div class="questions__answer">
                         <h3 class="questions__title">¿Qué es CSS?
                             <span class="questions__arrow">
-                                <img src="./images/arrow.svg" class="questions__img" alt="">
+                                <img src="./img/arrow.svg" class="questions__img" alt="">
                             </span>
                         </h3>
 
@@ -230,7 +230,7 @@
                     <div class="questions__answer">
                         <h3 class="questions__title">¿Qué aprenderé en este curso?
                             <span class="questions__arrow">
-                                <img src="./images/arrow.svg" class="questions__img" alt="">
+                                <img src="./img/arrow.svg" class="questions__img" alt="">
                             </span>
                         </h3>
 
@@ -247,7 +247,7 @@
                     <div class="questions__answer">
                         <h3 class="questions__title">¿Qué es CSS GRID?
                             <span class="questions__arrow">
-                                <img src="./images/arrow.svg" class="questions__img" alt="">
+                                <img src="./img/arrow.svg" class="questions__img" alt="">
                             </span>
                         </h3>
 
@@ -303,12 +303,12 @@
 
         <section class="footer__copy container">
             <div class="footer__social">
-                <a href="#" class="footer__icons"><img src="./images/facebook.svg" class="footer__img" alt=""></a>
-                <a href="#" class="footer__icons"><img src="./images/twitter.svg" class="footer__img" alt=""></a>
-                <a href="#" class="footer__icons"><img src="./images/youtube.svg" class="footer__img" alt=""></a>
+                <a href="#" class="footer__icons"><img src="./img/facebook.svg" class="footer__img" alt=""></a>
+                <a href="#" class="footer__icons"><img src="./img/twitter.svg" class="footer__img" alt=""></a>
+                <a href="#" class="footer__icons"><img src="./img/youtube.svg" class="footer__img" alt=""></a>
             </div>
 
-            <h3 class="footer__copyright">Derechos reservados &copy; Jordan Alexander</h3>
+            <h3 class="footer__copyright">Derechos reservados &copy; Rodrigo Aranda</h3>
         </section>
     </footer>
 </body>
