--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Master en CSS</title>
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/normalize.css">
 </head>
 <body>
     <header class="hero">
@@ -311,5 +312,6 @@
             <h3 class="footer__copyright">Derechos reservados &copy; Rodrigo Aranda</h3>
         </section>
     </footer>
+    <script src="./js/index.js"></script>
 </body>
 </html>
