r:3 se agrego los estilos a los botones

--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
                     <a href="#" class="nav__links">Inicio</a>
                 </li>
                 <li class="nav__items">
-                    <a href="#" class="nav__links">Acerca de</a>
+                    <a href="#acercaDe" class="nav__links">Acerca de</a>
                 </li>
                 <li class="nav__items">
-                    <a href="#" class="nav__links">Contacto</a>
+                    <a href="#contacto" class="nav__links">Contacto</a>
                 </li>
                 <li class="nav__items">
                     <a href="#" class="nav__links">Blog</a>
                 </li>
 
-                <img src="./images/close.svg" class="nav__close" alt="">
+                <img src="./img/close.svg" class="nav__close" alt="">
             </ul>
 
             <div class="nav__menu">
-                <img src="./images/menu.svg" class="nav__img" alt="">
+                <img src="./img/menu.svg" class="nav__img" alt="">
             </div>
         </nav>
 
@@ -47,7 +47,7 @@
     </header>
 
     <main>
-        <section class="container about">
+        <section class="container about" id="acercaDe">
             <h2 class="subtitle">¿Qué aprenderás en este curso?</h2>
             <p class="about__paragraph">Todo lo necesario y obligatorio de CSS, (Flexbox, Grid, Custom properties,
                 Position, Animaciones, Box Model y más)</p>
@@ -120,7 +120,7 @@
                         <p class="price__features">Responsive</p>
                     </div>
 
-                    <a href="#" class="price__cta">Empieza ahora</a>
+                    <a href="#" class="price__cta price__cta-color">Empieza ahora</a>
                 </div>
 
 
@@ -272,7 +272,7 @@
         </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer" id="contacto">
         <section class="footer__container container">
             <nav class="nav nav--footer">
                 <h2 class="footer__title">Curso CSS.</h2>
@@ -285,7 +285,7 @@
                         <a href="#" class="nav__links">Acerca de</a>
                     </li>
                     <li class="nav__items">
-                        <a href="#" class="nav__links">Contacto</a>
+                        <a href="#contacto" class="nav__links">Contacto</a>
                     </li>
                     <li class="nav__items">
                         <a href="#" class="nav__links">Blog</a>
