s4: terminado integrado sass

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/normalize.css">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
 <body>
     <header class="hero">
@@ -24,10 +26,10 @@
                     <a href="#acercaDe" class="nav__links">Acerca de</a>
                 </li>
                 <li class="nav__items">
-                    <a href="#contacto" class="nav__links">Contacto</a>
+                    <a href="#cursos" class="nav__links">Cursos</a>
                 </li>
                 <li class="nav__items">
-                    <a href="#" class="nav__links">Blog</a>
+                    <a href="#contacto" class="nav__links">Contacto</a>
                 </li>
 
                 <img src="./img/close.svg" class="nav__close" alt="">
@@ -92,7 +94,7 @@
             </div>
         </section>
 
-        <section class="price container">
+        <section class="price container" id="cursos">
             <h2 class="subtitle">Obten el plan perfecto para aprender</h2>
 
             <div class="price__table">
@@ -282,13 +284,13 @@
                         <a href="#" class="nav__links">Inicio</a>
                     </li>
                     <li class="nav__items">
-                        <a href="#" class="nav__links">Acerca de</a>
+                        <a href="#acercaDe" class="nav__links">Acerca de</a>
+                    </li>
+                    <li class="nav__items">
+                        <a href="#cursos" class="nav__links">Cursos</a>
                     </li>
                     <li class="nav__items">
                         <a href="#contacto" class="nav__links">Contacto</a>
-                    </li>
-                    <li class="nav__items">
-                        <a href="#" class="nav__links">Blog</a>
                     </li>
                 </ul>
             </nav>
@@ -304,9 +306,9 @@
 
         <section class="footer__copy container">
             <div class="footer__social">
-                <a href="#" class="footer__icons"><img src="./img/facebook.svg" class="footer__img" alt=""></a>
-                <a href="#" class="footer__icons"><img src="./img/twitter.svg" class="footer__img" alt=""></a>
-                <a href="#" class="footer__icons"><img src="./img/youtube.svg" class="footer__img" alt=""></a>
+                <a href="https://www.facebook.com/Rodtiigo/" class="footer__icons"><i class="bi bi-facebook footer__img"></i></a>
+                <a href="#" class="https://github.com/Drocu" class="footer__icons"><i class="bi bi-github footer__img"></i></a>
+                <a href="https://www.linkedin.com/in/rodrigo-aranda-78ab90233/"  class="footer__icons"><i class="bi bi-linkedin footer__img"></i></a>
             </div>
 
             <h3 class="footer__copyright">Derechos reservados &copy; Rodrigo Aranda</h3>
