s4: se arreglo el boton de navegacion de menu

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="hero">
-        <nav class="nav container">
+        <nav class="nav container" id="nav">
             <div class="nav__logo">
                 <h2 class="nav__title">Curso CSS.</h2>
             </div>
@@ -32,11 +32,11 @@
                     <a href="#contacto" class="nav__links">Contacto</a>
                 </li>
 
-                <img src="./img/close.svg" class="nav__close" alt="">
+                <img href="#"src="./img/close.svg" class="nav__close " alt="">
             </ul>
 
-            <div class="nav__menu">
-                <img src="./img/menu.svg" class="nav__img" alt="">
+            <div class="nav__menu nav__action--menu">
+                <img href="#nav" src="./img/menu.svg" class="nav__img " alt="">
             </div>
         </nav>
 
@@ -306,9 +306,9 @@
 
         <section class="footer__copy container">
             <div class="footer__social">
-                <a href="https://www.facebook.com/Rodtiigo/" class="footer__icons"><i class="bi bi-facebook footer__img"></i></a>
-                <a href="#" class="https://github.com/Drocu" class="footer__icons"><i class="bi bi-github footer__img"></i></a>
-                <a href="https://www.linkedin.com/in/rodrigo-aranda-78ab90233/"  class="footer__icons"><i class="bi bi-linkedin footer__img"></i></a>
+                <a href="https://www.facebook.com/Rodtiigo/" class="footer__icons"><i class="bi bi-facebook"></i></a>
+                <a href="https://github.com/Drocu" class="footer__icons"><i class="bi bi-github"></i></a>
+                <a href="https://www.linkedin.com/in/rodrigo-aranda-78ab90233/"  class="footer__icons"><i class="bi bi-linkedin"></i></a>
             </div>
 
             <h3 class="footer__copyright">Derechos reservados &copy; Rodrigo Aranda</h3>
